--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -10,17 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.9.0",
-    "react-native": "0.61.5",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "5.0.5",
     "@react-navigation/drawer": "5.0.5",
     "@react-navigation/native": "5.0.5",
     "@react-navigation/stack": "5.0.5",
+    "react": "16.9.0",
+    "react-native": "0.61.5",
+    "react-native-gesture-handler": "1.6.0",
     "react-native-reanimated": "1.7.0",
     "react-native-safe-area-context": "0.7.3",
-    "react-native-gesture-handler": "1.6.0",
-    "react-native-screens": "2.3.0"
+    "react-native-screens": "2.3.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -30,7 +33,8 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "reactotron-react-native": "^4.0.3"
   },
   "jest": {
     "preset": "react-native"
