--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -17,10 +17,13 @@
     "@react-navigation/stack": "5.0.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-form-validator": "^0.3.2",
     "react-native-gesture-handler": "1.6.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.3.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
