--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "5.0.5",
     "@react-navigation/native": "5.0.5",
     "@react-navigation/stack": "5.0.5",
+    "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-form-validator": "^0.3.2",
