--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/stack": "5.0.5",
     "moment": "^2.24.0",
     "react": "16.9.0",
-    "react-native": "0.61.5",
+    "react-native": "^0.62.1",
     "react-native-form-validator": "^0.3.2",
     "react-native-gesture-handler": "1.6.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -40,7 +40,7 @@
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0",
-    "reactotron-react-native": "^4.0.3"
+    "reactotron-react-native": "^5.0.0"
   },
   "jest": {
     "preset": "react-native"
