--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-native-fontawesome": "^0.2.3",
     "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/drawer": "5.0.5",
     "@react-navigation/native": "5.0.5",
@@ -25,6 +26,7 @@
     "react-native-form-validator": "^0.3.2",
     "react-native-gesture-handler": "1.6.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.3.0",
