--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -30,6 +30,7 @@
     "react-native-reanimated": "1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.3.0",
+    "react-native-share": "^3.3.0",
     "react-native-svg": "^12.0.3",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
