--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-native-fontawesome": "^0.2.3",
-    "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/async-storage": "^1.10.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "0.1.6",
     "@react-native-community/netinfo": "^5.8.0",
@@ -37,6 +37,7 @@
     "react-native-screens": "2.3.0",
     "react-native-share": "^3.3.2",
     "react-native-svg": "^12.0.3",
+    "react-native-toast-module": "file:libs/react-native-toast-module",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
