--- a/TrainingApp/android/app/build.gradle
+++ b/TrainingApp/android/app/build.gradle
@@ -183,6 +183,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-share')
     implementation project(':react-native-maps')
+    implementation project(':react-native-push-notification')
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
