--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "1.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.27.1",
+    "react-native-push-notification": "^3.5.1",
     "react-native-reanimated": "1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "2.3.0",
