--- a/TrainingApp/android/app/src/main/AndroidManifest.xml
+++ b/TrainingApp/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:fullBackupContent="@xml/appcenter_backup_rule">
       <meta-data  android:name="com.dieam.reactnativepushnotification.notification_channel_name"
                   android:value="YOUR NOTIFICATION CHANNEL NAME"/>
       <meta-data  android:name="com.dieam.reactnativepushnotification.notification_channel_description"
