--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -21,6 +21,9 @@
     "@react-navigation/native": "5.0.5",
     "@react-navigation/stack": "5.0.5",
     "@reduxjs/toolkit": "^1.3.4",
+    "appcenter": "3.0.2",
+    "appcenter-analytics": "3.0.2",
+    "appcenter-crashes": "3.0.2",
     "buffer": "^5.6.0",
     "events": "^3.1.0",
     "html-entities": "^1.3.1",
