--- a/TrainingApp/package.json
+++ b/TrainingApp/package.json
@@ -6,7 +6,11 @@
     "android": "npx react-native run-android",
     "ios": "npx react-native run-ios",
     "start": "npx react-native start",
-    "test": "jest",
+    "test": "jest --verbose",
+    "test:debug": "node --inspect node_modules/.bin/jest --runInBand",
+    "test:update": "jest --verbose --updateSnapshot",
+    "test:watch": "jest --verbose --watch",
+    "coverage": "jest --verbose --coverage && open ./coverage/lcov-report/index.html",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -29,8 +33,9 @@
     "html-entities": "^1.3.1",
     "html-to-text": "^5.1.1",
     "moment": "^2.24.0",
-    "react": "16.9.0",
-    "react-native": "^0.62.1",
+    "react": "16.13.1",
+    "react-dom": "^16.13.1",
+    "react-native": "0.61.5",
     "react-native-form-validator": "^0.3.2",
     "react-native-gesture-handler": "1.6.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -51,13 +56,29 @@
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "eslint": "^6.5.1",
-    "jest": "^24.9.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.3.0",
+    "mockdate": "^2.0.5",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0",
     "reactotron-react-native": "^5.0.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "cacheDirectory": "./cache",
+    "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js",
+      "./src/setupTests.js"
+    ],
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "identity-obj-proxy"
+    },
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
